tests/rules/samples/check_preprocessor_protection_4.h
#if !defined CHECK_PREPROCESSOR_PROTECTION_3_H
# define CHECK_PREPROCESSOR_PROTECTION_3_H

void	some_instruction(void);

#endif

void	some_other_instruction(void);
